# TestBlinkHAL

./: CMakeLists.txt  README.md  STM32F051R8TX_FLASH.ld
Core/Inc/: main.h
Core/Src/: main.c
